--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: 'Hydrography: Evaluating github.com/repatterning/variational'
+name: 'Emergency: Evaluating github.com/antecedents/variational'
 
 on: [push]
 
